# OS_L

./: README.md
.devcontainer/: devcontainer.json
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/include/: child1.hpp  child2.hpp  commonchild.hpp  parent.hpp
lab1/src/: child1.cpp  child2.cpp  commonchild.cpp  parent.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab1_tests.cpp
